do not register(save) user if his profilePictureId is not valid. Add version to entities for adding optimistic locking remove unused methods before remove eventTag , remove all eventTag associations with events by UserUpdate check for constrain violation like unique_username and unique_email by DeleteUser, remove all user associations with joinedEvents